--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -4,11 +4,14 @@ date: 2023-06-27T09:31:28+08:00
 draft: true
 ---
 
-# 流批一体的两大实现路径
+## 流批一体的两大实现路径
 流批一体是面对实时和离线任务分离的情况下,一种统一处理的想法.
 基本上,实现流批一体有两种大的实现路径.
+{{ < note info > }}
 第一种是存储上做到流批的统一,很多数据湖的产品,都是基于这样的思路,将历史数据和实时数据都统一存储到同一个存储系统中.
 第二种就是在计算上找方法,做到计算层面上的流批一体.相对而言,这种实现的思路较上一种容易实现.将计算逻辑在上层做统一封装,在底层分别对离线和实时做分离.将计算结果在最后做统一.底层存储架构是lambda架构,同时保留离线和实时两套存储,实时只保留最近的数据.
+{{< /note >}}
+
 
 计算上需要
 首先指定计算范围:时间范围,表范围,列范围. 离线的计算频率
