--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -2,11 +2,15 @@
 title: "流批一体的思考和实现"
 date: 2023-06-27T09:31:28+08:00
 draft: true
+categories:
+ - 数据产品
+tags:
+ - 流批一体
 ---
 
 ## 流批一体的两大实现路径
 流批一体是面对实时和离线任务分离的情况下,一种统一处理的想法.
-基本上,实现流批一体有两种大的实现路径.
+<mark>基本上,实现流批一体有两种大的实现路径.<mark>
 {{< note info >}}
 ### 第一种是存储上做到流批的统一
 很多数据湖的产品,都是基于这样的思路,将历史数据和实时数据都统一存储到同一个存储系统中.
