--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -10,30 +10,29 @@ tags:
 
 ## 流批一体的两大实现路径
 流批一体是面对实时和离线任务分离的情况下,一种统一处理的想法.
-<mark>基本上,实现流批一体有两种大的实现路径.<mark>
+<mark>基本上,实现流批一体有两种大的实现路径.</mark>
 {{< note info >}}
 ### 第一种是存储上做到流批的统一
 很多数据湖的产品,都是基于这样的思路,将历史数据和实时数据都统一存储到同一个存储系统中.
 ### 第二种就是在计算层面上的流批一体
 相对而言,这种实现的思路较上一种容易实现.将计算逻辑在上层做统一封装,在底层分别对离线和实时做分离.将计算结果在最后做统一.底层存储架构是lambda架构,同时保留离线和实时两套存储,实时只保留最近的数据.
 {{< /note >}}
+`这篇文章就是通过第二种方式实现流批一体.`
 
-
-计算上需要
+<!-- 计算上需要
 首先指定计算范围:时间范围,表范围,列范围. 离线的计算频率
-其次将计算进行封装
-需要思考一个点
-> 加入实时数据的处理逻辑变了,如何重新跑 
+其次将计算进行封装 -->
+
+<mark>思考两个问题</mark>
+> ### 实时数据的处理逻辑变了,如何重新跑
 这种情况其实就是重新建立一个实时跑数程序.
 如果实时数据的逻辑没有变,但是有段时间出了问题,需要返回一段时间重新开始跑
-> 再思考一个问题
+### 再思考一个问题
 上面的问题针对驱动流,那么下面的问题针对的就是关联流了
 然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织. 同步的时候需要 指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
 
 前提是lambda架构,有历史的数据存储在hive中.
-====
-
-
+---
 
 
 1. 驱动流 
