--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -21,7 +21,7 @@ tags:
 相对而言,这种实现的思路较上一种容易实现.将计算逻辑在上层做统一封装,在底层分别对离线和实时做分离.将计算结果在最后做统一.底层存储架构是lambda架构,同时保留离线和实时两套存储,实时只保留最近的数据.
 {{< /note >}}
 
-`这篇文章就是通过第二种方式实现流批一体.`
+`这篇文章就是通过第二种方式实现流批一体.前提是lambda架构,有历史的数据存储在hive中.`
 
 
 <!-- 计算上需要
@@ -29,23 +29,24 @@ tags:
 其次将计算进行封装 -->
 
 <mark>思考两个问题</mark>
+
 {{< note success >}}
 ### 实时数据的处理逻辑变了,如何重新跑
-这种情况其实就是重新建立一个实时跑数程序.
-如果实时数据的逻辑没有变,但是有段时间出了问题,需要返回一段时间重新开始跑
-### 再思考一个问题
+1. 这种情况其实就是重新建立一个实时跑数程序.
+2. 但是如果实时数据的逻辑没有变,只是有段时间出了问题,需要返回一段时间重新开始跑
+### 实时数据的关联数据结构变了,如何重新跑
 上面的问题针对驱动流,那么下面的问题针对的就是关联流了
-然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织. 同步的时候需要 指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
+然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织.同步的时候需要 指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
 {{< /note >}}
 
-前提是lambda架构,有历史的数据存储在hive中.
 ---
+<mark>我们将实时数据分两个大的部分分析</mark>
 
-
-1. 驱动流 
+{{< note success >}}
+### - 驱动流 
 如果重新跑的数据都在kafka中的时候,则直接指定offset就可以
 如果重新跑的数据一部分在kafka,更早的数据kafka中没有,就需要从hive中重新导入(hive保存全部历史数据)
-1. 被关联流 
+### - 被关联流 
 是写入到hbase表中
 那么涉及到重新读取hive表,并写入到hbase中,且要实时更新hbase,保证最新的hbase表的状态.
 从上面的表述发现,都要涉及读取hive,一个写入到kafka重新消费,一个是写入到hbase
@@ -54,6 +55,8 @@ tags:
 基于上面的思考,将hive的历史数据导入kafka并可以和kafka实时数据做无缝衔接是很难实现.
 退而求其次,驱动流的重现消费,时间跨度不能超过kafka队列中最长的时间.(从生产角度看也应该如此,实时任务一旦停止,重新消费的时间都不会超过kafka队列最大存储时间).
 ***所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***
+{{< /note >}}
+
 
 hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.
 
