--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -39,14 +39,13 @@ tags:
 然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织.同步的时候需要 指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
 {{< /note >}}
 
----
 <mark>我们将实时数据分两个大的部分分析</mark>
 
 {{< note success >}}
-### - 驱动流 
+### 驱动流 
 如果重新跑的数据都在kafka中的时候,则直接指定offset就可以
 如果重新跑的数据一部分在kafka,更早的数据kafka中没有,就需要从hive中重新导入(hive保存全部历史数据)
-### - 被关联流 
+### 被关联流 
 是写入到hbase表中
 那么涉及到重新读取hive表,并写入到hbase中,且要实时更新hbase,保证最新的hbase表的状态.
 从上面的表述发现,都要涉及读取hive,一个写入到kafka重新消费,一个是写入到hbase
@@ -54,15 +53,12 @@ tags:
 一方面,如何确保开始向kafka导入hive的数据的那一刻时间的实时kafka数据能准确的与历史数据对接准确.另一方面,kafka的数据是以数据进入kafka的时间做为时间戳,而hive的数据,则是基于业务时间.
 基于上面的思考,将hive的历史数据导入kafka并可以和kafka实时数据做无缝衔接是很难实现.
 退而求其次,驱动流的重现消费,时间跨度不能超过kafka队列中最长的时间.(从生产角度看也应该如此,实时任务一旦停止,重新消费的时间都不会超过kafka队列最大存储时间).
-***所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***
 {{< /note >}}
 
-
-hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.
-
-而且为了提高同步效率,hive2hbase 和hbase2hbase不能用hbase的api来同步,而是MR.
-
-这是之前写的同步程序,在我原来的电脑上,回去找下源码
+`***所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***`
+`hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.`
+`而且为了提高同步效率,hive2hbase 和hbase2hbase不能用hbase的api来同步,而是MR.`
+<!-- 这是之前写的同步程序,在我原来的电脑上,回去找下源码 -->
 
 1. 被关联流的组合逻辑 core 
 
