--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -36,27 +36,30 @@ tags:
 2. 但是如果实时数据的逻辑没有变,只是有段时间出了问题,需要返回一段时间重新开始跑
 ### 实时数据的关联数据结构变了,如何重新跑
 上面的问题针对驱动流,那么下面的问题针对的就是关联流了
-然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织.同步的时候需要 指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
+然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织.同步的时候需要指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
 {{< /note >}}
 
 <mark>我们将实时数据分两个大的部分分析</mark>
 
 {{< note success >}}
 ### 驱动流 
-如果重新跑的数据都在kafka中的时候,则直接指定offset就可以
-如果重新跑的数据一部分在kafka,更早的数据kafka中没有,就需要从hive中重新导入(hive保存全部历史数据)
+如果重新跑的数据都在kafka中的时候,则直接指定offset就可以.
+如果重新跑的数据一部分在kafka,更早的数据kafka中没有,就需要从hive中重新导入(hive保存全部历史数据).
+退而求其次,驱动流的重现消费,时间跨度不能超过kafka队列中最长的时间.其实,从生产角度看也应该如此,实时任务一旦停止,重新消费的时间都不会超过kafka队列最大存储时间.
+
+`但是上面操作是在驱动流的处理逻辑不变的情况下,如果驱动流的逻辑变化了的话,势必需要重新读取超过了kafka队列最大存储时间的数据.
+那么这样就得需要涉及到读取历史的数据以及读取最新的实时数据,那么也就涉及到了两部分数据如何准确切换的问题?`
 ### 被关联流 
-是写入到hbase表中
-那么涉及到重新读取hive表,并写入到hbase中,且要实时更新hbase,保证最新的hbase表的状态.
-从上面的表述发现,都要涉及读取hive,一个写入到kafka重新消费,一个是写入到hbase
-但是这两个地方都有个关键的点,如何确保在导入历史数据的过程中,实时的数据和历史数据的准确衔接.写入hbase可以利用幂等性,hive的数据和kafka实时的数据,可以有部分重复,导入到hbase中,重复的数据不会有影响. 
-一方面,如何确保开始向kafka导入hive的数据的那一刻时间的实时kafka数据能准确的与历史数据对接准确.另一方面,kafka的数据是以数据进入kafka的时间做为时间戳,而hive的数据,则是基于业务时间.
-基于上面的思考,将hive的历史数据导入kafka并可以和kafka实时数据做无缝衔接是很难实现.
-退而求其次,驱动流的重现消费,时间跨度不能超过kafka队列中最长的时间.(从生产角度看也应该如此,实时任务一旦停止,重新消费的时间都不会超过kafka队列最大存储时间).
+
+需要重新读取hive表写入到hbase中,且要实时更新hbase,保证最新的hbase表的状态.
+其中涉及读取hive,一个写入到kafka重新消费,一个是写入到hbase
+但是这两个地方都有个关键的点,如何确保在导入历史数据的过程中,实时的数据和历史数据的准确衔接?可以利用hbase写入的幂等性,hive的数据和kafka实时的数据,可以有部分重复,导入到hbase中,重复的数据不会有影响. 
 {{< /note >}}
 
-`***所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***`
+`所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***`
+
 `hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.`
+
 `而且为了提高同步效率,hive2hbase 和hbase2hbase不能用hbase的api来同步,而是MR.`
 <!-- 这是之前写的同步程序,在我原来的电脑上,回去找下源码 -->
 
