--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -56,7 +56,12 @@ tags:
 但是这两个地方都有个关键的点,如何确保在导入历史数据的过程中,实时的数据和历史数据的准确衔接?可以利用hbase写入的幂等性,hive的数据和kafka实时的数据,可以有部分重复,导入到hbase中,重复的数据不会有影响. 
 {{< /note >}}
 
-`所以,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase***`
+`所以,在驱动流的逻辑不变的情况下,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase`
+|逻辑是否变化|驱动流数据是否超出kafka队列最大存储时间|被关联流的处理逻辑是否变化|结论|
+|:----------:|:---------------------------------:|:----------------------:|:---
+|是|是|是|A
+|是|是|是|A
+|是|是|是|A
 
 `hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.`
 
