--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -57,11 +57,11 @@ tags:
 {{< /note >}}
 
 `所以,在驱动流的逻辑不变的情况下,驱动流只需要做好指定kafka的offset,被关联流则是需要做到hive2hbase hbase2hbase`
-|逻辑是否变化|驱动流数据是否超出kafka队列最大存储时间|被关联流的处理逻辑是否变化|结论|
+|驱动流逻辑是否变化|驱动流数据是否超出kafka队列最大存储时间|被关联流的处理逻辑是否变化|结论|
 |:----------:|:---------------------------------:|:----------------------:|:---
-|是|是|是|A
-|是|是|是|A
-|是|是|是|A
+|是|是|是|当驱动流逻辑变化时,就当新需求开发
+|否|是|是|A
+|否|是|是|A
 
 `hive2hbase 和 hbase2hbase 不是单纯的进行数据的同步,而是需要根据逻辑重新组合.`
 
@@ -72,59 +72,33 @@ tags:
 
 都是inner join
 
-> 1) 根据sql 来分析用到的表和字段
-> 
-> 
-> 2) 指定根据hbase来重新组合还是hive来作为源表
-> 
-> 3) 表字段分析
-> 
+> 1. 根据sql 来分析用到的表和字段
+> 2. 指定根据hbase来重新组合还是hive来作为源表
+> 3. 表字段分析
 
 对hbase表建立hive外部表 或直接用hive表
-
 截取表count数的10% 20% 30% 用sql分析
-
 select f1,f2 from t1 join t2 on t1.f1 = t2.f2
-
 关联字段和主键的关系
-
 分析表主键字段
-
 分析表的关联字段
-
 1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
 2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
-    
-    则分析t2表的非主键的关联字段和t2表的主键的关系
-    
-    1) 如果t2表的主键和该表的关联字段是一一对应的关系 (考上面的取样分析)
-    
+   则分析t2表的非主键的关联字段和t2表的主键的关系
+    1)如果t2表的主键和该表的关联字段是一一对应的关系 (考上面的取样分析)
     或者近似一一对应关系
-    
     就根据t2的关联字段重新组织
-    
     2) 如果t2表的主键和关联字段的值去重后差距很大的话,例如student和class
-    
     student是主键,class是关联字段的,一个class可以对应n多个student,
-    
     这样的话,就需要看select查询的字段了,如果查询的字段和主键字段差距不大的话,就将关联字段和select字段拼接在一起,作为rowkey,总之,就是要减少列的个数,增加rowkey的个数.
-    
-    但是前提是驱动流里的字段中是否有select字段.
-    
+    但是前提是驱动流里的字段中是否有select字段.  
     也就是说,程序在一开始就要全部扫到驱动流和被关联表之间所有可以匹配上的字段.
-    
     然后根据关联字段价格其他可以匹配上的字段,组合成rowkey,这个rowkey尽量可以覆盖所有的表数据,从而可以根据rowkey可以快速的找到数据.
-    
     注意:cell中的数据,存储的是整个行数据,并以json格式存储.
-    
     rowkey是关联字段值
-    
-    列是表的主键字段值
-    
+        列是表的主键字段值
     1. 如果关联字段的值和主键字段的值是一一对应,或者是有不大的count差距的话,可以直接拼接
-        
-        所以这就需要count关联字段的值和主键字段的值.
-        
+    所以这就需要count关联字段的值和主键字段的值.
     2. 如果有比较大的差距的话,可以采取下面的方式,看驱动流和被关联表都存在的字段A,如果A字段和关联字段进行拼接后,可以达到和主键字段count数一一对应或接近的话,这是第一步,第一步的拼接方式没有业务逻辑依据,所以为了让它有意义,可以看select的字段,因为原先如果只是根据关联字段作为rowkey进行查找的话,势必出来多个结果,但是如果select字段的值,在这多个结果中是一样的话,就不必须去取多个值,只获取一个就可以.所以当完成第一步之后,为了保证第一步有业务意义(select字段和主键是多对一的,关联字段和主键也是多对一的,就要count select字段的值和主键字段的值,并要对比select 的字段和关联字段的count数是否接近)
     3. 如果select字段和主键字段的count数接近或着一一对应的,且关联字段的count数和select字段的count数差距很大的话,势必每次返回的结果都是n条,如果实时处理的时候,每次都返回多条然后拉到本地过滤处理的话,处理延时会很大,这样的话,最好的方法是利用hbase的协处理器,将处理逻辑方法指定的hbase表中处理.
     
@@ -133,13 +107,8 @@ select f1,f2 from t1 join t2 on t1.f1 = t2.f2
     | sql | create sql (固定格式) | join sql(固定格式) 
     
     sql解析
-    
-    建立外部表
-    
+    建立外部
     count 各个字段,按照上面的逻辑处理
-    
     第一种情况,不需要特殊处理,按照业务逻辑重新建表并组织并导入数据.(生成离线的和kafka实时两个部分)
-    
     第二种情况,需要将多个字段进行拼接作为rowkey.(生成离线的和kafka实时两个部分)
-    
     第三种情况,也不需要特殊处理(无法特殊处理,如果按照第二种情况添加其他字段的话,就没有业务意义),但是为了减少IO,将处理的逻辑封装到协处理器中. ps:  这里是写入,生成协处理器是在读取阶段
