--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -69,10 +69,9 @@ tags:
 <!-- 这是之前写的同步程序,在我原来的电脑上,回去找下源码 -->
 
 1. 被关联流的组合逻辑 core 
+   都是inner join
 
-都是inner join
-
-> 1. 根据sql 来分析用到的表和字段
+> 1. 根据sql来分析用到的表和字段
 > 2. 指定根据hbase来重新组合还是hive来作为源表
 > 3. 表字段分析
 
@@ -82,13 +81,13 @@ select f1,f2 from t1 join t2 on t1.f1 = t2.f2
 关联字段和主键的关系
 分析表主键字段
 分析表的关联字段
-1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
-2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
-   则分析t2表的非主键的关联字段和t2表的主键的关系
-    1)如果t2表的主键和该表的关联字段是一一对应的关系 (考上面的取样分析)
+### 1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
+### 2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
+>则分析t2表的非主键的关联字段和t2表的主键的关系
+   如果t2表的主键和该表的关联字段是一一对应的关系 (考上面的取样分析)
     或者近似一一对应关系
     就根据t2的关联字段重新组织
-    2) 如果t2表的主键和关联字段的值去重后差距很大的话,例如student和class
+   如果t2表的主键和关联字段的值去重后差距很大的话,例如student和class
     student是主键,class是关联字段的,一个class可以对应n多个student,
     这样的话,就需要看select查询的字段了,如果查询的字段和主键字段差距不大的话,就将关联字段和select字段拼接在一起,作为rowkey,总之,就是要减少列的个数,增加rowkey的个数.
     但是前提是驱动流里的字段中是否有select字段.  
