--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -29,7 +29,7 @@ tags:
 
 <mark>思考两个问题</mark>
 
-{{< note success >}}
+{{< note info >}}
 ### 实时数据的处理逻辑变了,如何重新跑
 1. 这种情况其实就是重新建立一个实时跑数程序.
 2. 但是如果实时数据的逻辑没有变,只是有段时间出了问题,需要返回一段时间重新开始跑
@@ -40,7 +40,7 @@ tags:
 
 <mark>我们将实时数据分两个大的部分分析</mark>
 
-{{< note success >}}
+{{< note info >}}
 ### 驱动流 
 如果重新跑的数据都在kafka中的时候,则直接指定offset就可以.
 如果重新跑的数据一部分在kafka,更早的数据kafka中没有,就需要从hive中重新导入(hive保存全部历史数据).
@@ -81,7 +81,7 @@ select f1,f2 from t1 join t2 on t1.f1 = t2.f2
 分析表主键字段
 分析表的关联字段
 
-{{< note success >}}
+{{< note info >}}
 ### 1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
 ### 2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
 则分析t2表的非主键的关联字段和t2表的主键的关系
