--- a/content/post/流批一体的思考和实现.md
+++ b/content/post/流批一体的思考和实现.md
@@ -10,12 +10,7 @@ tags:
 toc: true
 ---
 
-
-## AAA
-
-asasa
-
-### BBB
+## 流批一体的实现路径
 
 流批一体是面对实时和离线任务分离的情况下,一种统一处理的想法.
 
@@ -35,6 +30,8 @@ asasa
 首先指定计算范围:时间范围,表范围,列范围. 离线的计算频率
 其次将计算进行封装 -->
 
+## 程序的开发与变更
+
 <mark>思考两个问题</mark>
 
 {{< note info >}}
@@ -45,6 +42,8 @@ asasa
 上面的问题针对驱动流,那么下面的问题针对的就是关联流了
 然后如果要有新的hbase维表出现,或者是有的hbase维表要重新创建新的rowkey的话,就要重新创建hbase维表,这就是涉及到hive到hbase的实时同步,这种同步不仅仅要将同步期间的数据不能丢失,而且要做到rowkey的重新组织.同步的时候需要指定哪些字段可以直接覆盖掉,或者是直接指定为最新的值.
 {{< /note >}}
+
+## 实时数据的join处理
 
 <mark>我们将实时数据分两个大的部分分析</mark>
 
@@ -75,23 +74,33 @@ asasa
 `而且为了提高同步效率,hive2hbase 和hbase2hbase不能用hbase的api来同步,而是MR.`
 <!-- 这是之前写的同步程序,在我原来的电脑上,回去找下源码 -->
 
-1. 被关联流的组合逻辑 core 
-   都是inner join
+## join的逻辑分析
 
-> 1. 根据sql来分析用到的表和字段
-> 2. 指定根据hbase来重新组合还是hive来作为源表
-> 3. 表字段分析
-
+### 1. 根据sql来分析用到的表和字段
 对hbase表建立hive外部表 或直接用hive表
+
 截取表count数的10% 20% 30% 用sql分析
+
 select f1,f2 from t1 join t2 on t1.f1 = t2.f2
+
 关联字段和主键的关系
+
 分析表主键字段
+
 分析表的关联字段
 
-{{< note info >}}
-### 1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
-### 2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
+### 2. 指定根据hbase来重新组合还是hive来作为源表
+
+### 3. 表字段分析
+#### 1. 如果t1表的主键和t2表的主键 进行关联 说明是一一关联
+#### 2. 如果t1表的主键和t2表的非主键进行关联(反之亦然)
+建立外部
+count 各个字段,按照上面的逻辑处理
+第一种情况,不需要特殊处理,按照业务逻辑重新建表并组织并导入数据.(生成离线的和kafka实时两个部分)
+第二种情况,需要将多个字段进行拼接作为rowkey.(生成离线的和kafka实时两个部分)
+第三种情况,也不需要特殊处理(无法特殊处理,如果按照第二种情况添加其他字段的话,就没有业务意义),但是为了减少IO,将处理的逻辑封装到协处理器中. ps:  这里是写入,生成协处理器是在读取阶段
+
+### 4. 都是inner join
 则分析t2表的非主键的关联字段和t2表的主键的关系
 * 如果t2表的主键和该表的关联字段是一一对应的关系 (考上面的取样分析)
 或者近似一一对应关系
@@ -110,19 +119,19 @@ rowkey是关联字段值
 2. 如果有比较大的差距的话,可以采取下面的方式,看驱动流和被关联表都存在的字段A,如果A字段和关联字段进行拼接后,可以达到和主键字段count数一一对应或接近的话,这是第一步,第一步的拼接方式没有业务逻辑依据,所以为了让它有意义,可以看select的字段,因为原先如果只是根据关联字段作为rowkey进行查找的话,势必出来多个结果,但是如果select字段的值,在这多个结果中是一样的话,就不必须去取多个值,只获取一个就可以.所以当完成第一步之后,为了保证第一步有业务意义(select字段和主键是多对一的,关联字段和主键也是多对一的,就要count select字段的值和主键字段的值,并要对比select 的字段和关联字段的count数是否接近)
 
 3. 如果select字段和主键字段的count数接近或着一一对应的,且关联字段的count数和select字段的count数差距很大的话,势必每次返回的结果都是n条,如果实时处理的时候,每次都返回多条然后拉到本地过滤处理的话,处理延时会很大,这样的话,最好的方法是利用hbase的协处理器,将处理逻辑方法指定的hbase表中处理.
-    
-{{< /note >}}
+
+
+
+
+
 
 | 配置(config) | hive | hbase | hadoop | yarn | spark |
 | --- | --- | --- | --- | --- | --- |
 | sql | create sql (固定格式) | join sql(固定格式) 
 
-sql解析
-
 ---
 
-建立外部
-count 各个字段,按照上面的逻辑处理
-第一种情况,不需要特殊处理,按照业务逻辑重新建表并组织并导入数据.(生成离线的和kafka实时两个部分)
-第二种情况,需要将多个字段进行拼接作为rowkey.(生成离线的和kafka实时两个部分)
-第三种情况,也不需要特殊处理(无法特殊处理,如果按照第二种情况添加其他字段的话,就没有业务意义),但是为了减少IO,将处理的逻辑封装到协处理器中. ps:  这里是写入,生成协处理器是在读取阶段
+sql解析
+
+
+
