--- a/content/post/我的日志(持续更新).md
+++ b/content/post/我的日志(持续更新).md
@@ -1,5 +1,5 @@
 ---
-title: "我的日志(持续更新)"
+title: "我的总结(持续更新)"
 date: 2023-12-18T11:20:28+08:00
 draft: true
 categories:
@@ -22,6 +22,7 @@ toc: true
 ## dashboard
 
 **可利用的UI组件就比较多了,还是要塌下心来做一个成品出来,然后作为模版使用**
+目前是打算用mantineUI来实现,配合youtube视频来综合学习.[Next.js 14 Admin Dashboard Tutorial | Fullstack Next.js 14 Project with Server Actions](https://www.youtube.com/watch?v=cBg6xA5C60s)
 
 ## quant
 
@@ -33,6 +34,7 @@ toc: true
 
 **技术上已经实现,接下来就是对接tradingview**
 
-## todo
+## tradezero
 
-**dashboard and dukas** 
+**梦回美股日内交易**
+[tradezero](https://www.tradezero.com)
