--- a/content/post/我的总结(持续更新).md
+++ b/content/post/我的总结(持续更新).md
@@ -33,8 +33,11 @@ toc: true
 ### dukas
 
 **技术上已经实现,接下来就是对接tradingview**
+对接tradingview,对接下单的API接口,开始进行下单测试.
 
-## tradezero
+### tradezero
 
 **梦回美股日内交易**
 [tradezero](https://www.tradezero.com)
+
+**技术上有两个github项目可以利用,都是基于seleium来实现的,但是目前还没有经过测试和验证,所以技术上还有段距离,可以关注,但目前先不做具体操作**
